--- a/Tenant Onboarding Solution/CanvasManifest.json
+++ b/Tenant Onboarding Solution/CanvasManifest.json
@@ -143,6 +143,7 @@
     "Mail Screen",
     "Policies Screen",
     "Renewal Request screen",
-    "Initiator Starting Screen"
+    "Initiator Starting Screen",
+    "Screen1"
   ]
 }
