--- a/Tenant Onboarding Solution/Src/Home Screen_1.fx.yaml
+++ b/Tenant Onboarding Solution/Src/Home Screen_1.fx.yaml
@@ -216,3 +216,115 @@
                             Y: =dob_label.Y + dob_label.Height
                             ZIndex: =4
 
+                        sex_label As label:
+                            BorderColor: =App.Theme.Colors.Darker40
+                            Color: =RGBA(4, 4, 4, 0.5)
+                            DisabledColor: =RGBA(166, 166, 166, 1)
+                            Font: =App.Theme.Font
+                            FontWeight: =FontWeight.Semibold
+                            Height: =30
+                            Size: =10
+                            Text: ="Sex"
+                            X: =name_label.X
+                            Y: =name_value.Y + name_value.Height + 10
+                            ZIndex: =5
+
+                        sex_value As label:
+                            BorderColor: =App.Theme.Colors.Darker40
+                            Color: =RGBA(4, 4, 4, 1)
+                            DisabledColor: =RGBA(166, 166, 166, 1)
+                            Fill: =RGBA(159, 159, 159, 0.1)
+                            Font: =App.Theme.Font
+                            FontWeight: =FontWeight.Semibold
+                            Height: =30
+                            Size: =11
+                            Text: =record.Sex
+                            Width: =Parent.Width/4 - 20
+                            X: =sex_label.X
+                            Y: =sex_label.Y + sex_label.Height
+                            ZIndex: =6
+
+                        religion_label As label:
+                            BorderColor: =App.Theme.Colors.Darker40
+                            Color: =RGBA(4, 4, 4, 0.5)
+                            DisabledColor: =RGBA(166, 166, 166, 1)
+                            Font: =App.Theme.Font
+                            FontWeight: =FontWeight.Semibold
+                            Height: =30
+                            Size: =10
+                            Text: ="Religion"
+                            X: =sex_value.X + sex_value.Width + 10
+                            Y: =name_value.Y + name_value.Height + 10
+                            ZIndex: =7
+
+                        religion_value As label:
+                            BorderColor: =App.Theme.Colors.Darker40
+                            Color: =RGBA(4, 4, 4, 1)
+                            DisabledColor: =RGBA(166, 166, 166, 1)
+                            Fill: =RGBA(159, 159, 159, 0.1)
+                            Font: =App.Theme.Font
+                            FontWeight: =FontWeight.Semibold
+                            Height: =30
+                            Size: =11
+                            Text: =record.Religion
+                            Width: =Parent.Width/4 - 10
+                            X: =religion_label.X
+                            Y: =religion_label.Y + religion_label.Height
+                            ZIndex: =8
+
+                        nationality_label As label:
+                            BorderColor: =App.Theme.Colors.Darker40
+                            Color: =RGBA(4, 4, 4, 0.5)
+                            DisabledColor: =RGBA(166, 166, 166, 1)
+                            Font: =App.Theme.Font
+                            FontWeight: =FontWeight.Semibold
+                            Height: =30
+                            Size: =10
+                            Text: ="Nationality"
+                            X: =religion_value.X + religion_value.Width + 10
+                            Y: =name_value.Y + name_value.Height + 10
+                            ZIndex: =9
+
+                        nationality_value As label:
+                            BorderColor: =App.Theme.Colors.Darker40
+                            Color: =RGBA(4, 4, 4, 1)
+                            DisabledColor: =RGBA(166, 166, 166, 1)
+                            Fill: =RGBA(159, 159, 159, 0.1)
+                            Font: =App.Theme.Font
+                            FontWeight: =FontWeight.Semibold
+                            Height: =30
+                            Size: =11
+                            Text: =record.Nationality
+                            Width: =Parent.Width/4 - 10
+                            X: =nationality_label.X
+                            Y: =nationality_label.Y + nationality_label.Height
+                            ZIndex: =10
+
+                        stateOfOrigin_label As label:
+                            BorderColor: =App.Theme.Colors.Darker40
+                            Color: =RGBA(4, 4, 4, 0.5)
+                            DisabledColor: =RGBA(166, 166, 166, 1)
+                            Font: =App.Theme.Font
+                            FontWeight: =FontWeight.Semibold
+                            Height: =30
+                            Size: =10
+                            Text: ="State of Origin"
+                            X: =nationality_value.X + nationality_value.Width + 10
+                            Y: =name_value.Y + name_value.Height + 10
+                            ZIndex: =11
+
+                        stateOfOrigin_value As label:
+                            BorderColor: =App.Theme.Colors.Darker40
+                            Color: =RGBA(4, 4, 4, 1)
+                            DisabledColor: =RGBA(166, 166, 166, 1)
+                            Fill: =RGBA(159, 159, 159, 0.1)
+                            Font: =App.Theme.Font
+                            FontWeight: =FontWeight.Semibold
+                            Height: =30
+                            Size: =11
+                            Text: =record.'State of Origin'
+                            Width: =Parent.Width/4 - 10
+                            X: =stateOfOrigin_label.X
+                            Y: =stateOfOrigin_label.Y + stateOfOrigin_label.Height
+                            ZIndex: =12
+
